--- a/requirements.txt
+++ b/requirements.txt
@@ -10,15 +10,15 @@ cffi==1.14.4              # via cryptography
 chardet==4.0.0            # via requests
 coreapi==2.3.3            # via drf-yasg
 coreschema==0.0.4         # via coreapi, drf-yasg
-cryptography==3.3.1       # via jwcrypto
+cryptography==3.4.1       # via jwcrypto
 datapunt-authorization-django==1.3.0  # via -r requirements.in
 datapunt-authorization-levels==0.1.3  # via -r requirements.in
 dateutils==0.6.12         # via -r requirements.in
 debtcollector==2.2.0      # via oslo.config, oslo.utils, python-keystoneclient
 defusedxml==0.6.0         # via djangorestframework-xml
-django-extensions==3.1.0  # via -r requirements.in
+django-extensions==3.1.1  # via -r requirements.in
 django-filter==2.4.0      # via -r requirements.in
-django==3.0.11            # via -r requirements.in, datapunt-authorization-django, django-filter, djangorestframework, drf-hal-json, drf-nested-fields, drf-yasg
+django==3.0.12            # via -r requirements.in, datapunt-authorization-django, django-filter, djangorestframework, drf-hal-json, drf-nested-fields, drf-yasg
 djangorestframework-csv==2.1.0  # via drf-amsterdam
 djangorestframework-gis==0.17  # via -r requirements.in
 djangorestframework-xml==2.0.0  # via drf-amsterdam
@@ -31,10 +31,10 @@ drf-yasg==1.20.0          # via -r requirements.in
 et-xmlfile==1.0.1         # via openpyxl
 idna==2.10                # via requests
 inflection==0.5.1         # via drf-yasg
-iso8601==0.1.13           # via keystoneauth1, oslo.utils
+iso8601==0.1.14           # via keystoneauth1, oslo.utils
 itypes==1.2.0             # via coreapi
 jdcal==1.4.1              # via openpyxl
-jinja2==2.11.2            # via coreschema
+jinja2==2.11.3            # via coreschema
 jwcrypto==0.8             # via -r requirements.in, datapunt-authorization-django
 keystoneauth1==4.3.0      # via python-keystoneclient
 markupsafe==1.1.1         # via jinja2
@@ -47,7 +47,7 @@ oslo.config==8.4.0        # via python-keystoneclient
 oslo.i18n==5.0.1          # via oslo.config, oslo.utils, python-keystoneclient
 oslo.serialization==4.0.1  # via python-keystoneclient
 oslo.utils==4.7.0         # via oslo.serialization, python-keystoneclient
-packaging==20.8           # via drf-yasg, oslo.utils
+packaging==20.9           # via drf-yasg, oslo.utils
 pbr==5.5.1                # via debtcollector, keystoneauth1, os-service-types, oslo.i18n, oslo.serialization, oslo.utils, python-keystoneclient, stevedore
 psycopg2-binary==2.8.6    # via -r requirements.in
 pycparser==2.20           # via cffi
@@ -55,17 +55,20 @@ pyparsing==2.4.7          # via oslo.utils, packaging
 python-dateutil==2.8.1    # via dateutils
 python-keystoneclient==4.2.0  # via -r requirements.in
 python-swiftclient==3.11.0  # via -r requirements.in
-pytz==2020.5              # via dateutils, django, oslo.serialization, oslo.utils
+pytz==2021.1              # via dateutils, django, oslo.serialization, oslo.utils
 pyyaml==5.4.1             # via oslo.config
 requests==2.25.1          # via coreapi, datapunt-authorization-django, keystoneauth1, oslo.config, python-keystoneclient, python-swiftclient
 rfc3986==1.4.0            # via oslo.config
 ruamel.yaml.clib==0.2.2   # via ruamel.yaml
 ruamel.yaml==0.16.12      # via drf-yasg
+semantic-version==2.8.5   # via setuptools-rust
 sentry-sdk==0.19.5        # via -r requirements.in
-six==1.15.0               # via cryptography, debtcollector, djangorestframework-csv, keystoneauth1, oslo.i18n, oslo.utils, python-dateutil, python-keystoneclient, python-swiftclient
+setuptools-rust==0.11.6   # via cryptography
+six==1.15.0               # via debtcollector, djangorestframework-csv, keystoneauth1, oslo.i18n, oslo.utils, python-dateutil, python-keystoneclient, python-swiftclient
 sqlparse==0.4.1           # via django
 stevedore==3.3.0          # via keystoneauth1, oslo.config, python-keystoneclient
+toml==0.10.2              # via setuptools-rust
 unicodecsv==0.14.1        # via djangorestframework-csv
 uritemplate==3.0.1        # via coreapi, drf-yasg
-urllib3==1.26.2           # via requests, sentry-sdk
+urllib3==1.26.3           # via requests, sentry-sdk
 wrapt==1.12.1             # via debtcollector
