--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -15,17 +15,17 @@ chardet==4.0.0            # via -r ./requirements.txt, requests
 click==7.1.2              # via black, pip-tools
 coreapi==2.3.3            # via -r ./requirements.txt, drf-yasg
 coreschema==0.0.4         # via -r ./requirements.txt, coreapi, drf-yasg
-coverage==5.3.1           # via pytest-cov
-cryptography==3.3.1       # via -r ./requirements.txt, jwcrypto
+coverage==5.4             # via pytest-cov
+cryptography==3.4.1       # via -r ./requirements.txt, jwcrypto
 datapunt-authorization-django==1.3.0  # via -r ./requirements.txt
 datapunt-authorization-levels==0.1.3  # via -r ./requirements.txt
 dateutils==0.6.12         # via -r ./requirements.txt
 debtcollector==2.2.0      # via -r ./requirements.txt, oslo.config, oslo.utils, python-keystoneclient
 decorator==4.4.2          # via ipython
 defusedxml==0.6.0         # via -r ./requirements.txt, djangorestframework-xml
-django-extensions==3.1.0  # via -r ./requirements.txt
+django-extensions==3.1.1  # via -r ./requirements.txt
 django-filter==2.4.0      # via -r ./requirements.txt
-django==3.0.11            # via -r ./requirements.txt, datapunt-authorization-django, django-filter, djangorestframework, drf-hal-json, drf-nested-fields, drf-yasg
+django==3.0.12            # via -r ./requirements.txt, datapunt-authorization-django, django-filter, djangorestframework, drf-hal-json, drf-nested-fields, drf-yasg
 djangorestframework-csv==2.1.0  # via -r ./requirements.txt, drf-amsterdam
 djangorestframework-gis==0.17  # via -r ./requirements.txt
 djangorestframework-xml==2.0.0  # via -r ./requirements.txt, drf-amsterdam
@@ -37,20 +37,20 @@ drf-nested-fields==0.9.5  # via -r ./requirements.txt, drf-hal-json
 drf-yasg==1.20.0          # via -r ./requirements.txt
 et-xmlfile==1.0.1         # via -r ./requirements.txt, openpyxl
 factory-boy==3.2.0        # via -r requirements_dev.in
-faker==5.6.5              # via factory-boy
+faker==6.0.0              # via factory-boy
 flake8==3.8.4             # via pytest-flake8
 idna==2.10                # via -r ./requirements.txt, requests
 inflection==0.5.1         # via -r ./requirements.txt, drf-yasg
 iniconfig==1.1.1          # via pytest
 ipdb==0.13.4              # via -r requirements_dev.in
 ipython-genutils==0.2.0   # via traitlets
-ipython==7.19.0           # via ipdb
-iso8601==0.1.13           # via -r ./requirements.txt, keystoneauth1, oslo.utils
+ipython==7.20.0           # via ipdb
+iso8601==0.1.14           # via -r ./requirements.txt, keystoneauth1, oslo.utils
 isort==5.7.0              # via pytest-isort
 itypes==1.2.0             # via -r ./requirements.txt, coreapi
 jdcal==1.4.1              # via -r ./requirements.txt, openpyxl
 jedi==0.18.0              # via ipython
-jinja2==2.11.2            # via -r ./requirements.txt, coreschema
+jinja2==2.11.3            # via -r ./requirements.txt, coreschema
 jwcrypto==0.8             # via -r ./requirements.txt, datapunt-authorization-django
 keystoneauth1==4.3.0      # via -r ./requirements.txt, python-keystoneclient
 markupsafe==1.1.1         # via -r ./requirements.txt, jinja2
@@ -65,7 +65,7 @@ oslo.config==8.4.0        # via -r ./requirements.txt, python-keystoneclient
 oslo.i18n==5.0.1          # via -r ./requirements.txt, oslo.config, oslo.utils, python-keystoneclient
 oslo.serialization==4.0.1  # via -r ./requirements.txt, python-keystoneclient
 oslo.utils==4.7.0         # via -r ./requirements.txt, oslo.serialization, python-keystoneclient
-packaging==20.8           # via -r ./requirements.txt, drf-yasg, oslo.utils, pytest
+packaging==20.9           # via -r ./requirements.txt, drf-yasg, oslo.utils, pytest
 parso==0.8.1              # via jedi
 pathspec==0.8.1           # via black
 pbr==5.5.1                # via -r ./requirements.txt, debtcollector, keystoneauth1, os-service-types, oslo.i18n, oslo.serialization, oslo.utils, python-keystoneclient, stevedore
@@ -87,29 +87,31 @@ pytest-cov==2.11.1        # via -r requirements_dev.in
 pytest-django==4.1.0      # via -r requirements_dev.in
 pytest-flake8==1.0.7      # via -r requirements_dev.in
 pytest-isort==1.3.0       # via -r requirements_dev.in
-pytest==6.2.1             # via -r requirements_dev.in, pytest-black, pytest-cov, pytest-django, pytest-flake8
+pytest==6.2.2             # via -r requirements_dev.in, pytest-black, pytest-cov, pytest-django, pytest-flake8
 python-dateutil==2.8.1    # via -r ./requirements.txt, dateutils, faker
 python-keystoneclient==4.2.0  # via -r ./requirements.txt
 python-swiftclient==3.11.0  # via -r ./requirements.txt
-pytz==2020.5              # via -r ./requirements.txt, dateutils, django, oslo.serialization, oslo.utils
+pytz==2021.1              # via -r ./requirements.txt, dateutils, django, oslo.serialization, oslo.utils
 pyyaml==5.4.1             # via -r ./requirements.txt, oslo.config
 regex==2020.11.13         # via black
 requests==2.25.1          # via -r ./requirements.txt, coreapi, datapunt-authorization-django, keystoneauth1, oslo.config, python-keystoneclient, python-swiftclient
 rfc3986==1.4.0            # via -r ./requirements.txt, oslo.config
 ruamel.yaml.clib==0.2.2   # via -r ./requirements.txt, ruamel.yaml
 ruamel.yaml==0.16.12      # via -r ./requirements.txt, drf-yasg
+semantic-version==2.8.5   # via -r ./requirements.txt, setuptools-rust
 sentry-sdk==0.19.5        # via -r ./requirements.txt
-six==1.15.0               # via -r ./requirements.txt, cryptography, debtcollector, djangorestframework-csv, keystoneauth1, oslo.i18n, oslo.utils, python-dateutil, python-keystoneclient, python-swiftclient
+setuptools-rust==0.11.6   # via -r ./requirements.txt, cryptography
+six==1.15.0               # via -r ./requirements.txt, debtcollector, djangorestframework-csv, keystoneauth1, oslo.i18n, oslo.utils, python-dateutil, python-keystoneclient, python-swiftclient
 sqlparse==0.4.1           # via -r ./requirements.txt, django
 stevedore==3.3.0          # via -r ./requirements.txt, keystoneauth1, oslo.config, python-keystoneclient
 text-unidecode==1.3       # via faker
-toml==0.10.2              # via black, pytest, pytest-black
+toml==0.10.2              # via -r ./requirements.txt, black, pytest, pytest-black, setuptools-rust
 traitlets==5.0.5          # via ipython
 typed-ast==1.4.2          # via black
 typing-extensions==3.7.4.3  # via black
 unicodecsv==0.14.1        # via -r ./requirements.txt, djangorestframework-csv
 uritemplate==3.0.1        # via -r ./requirements.txt, coreapi, drf-yasg
-urllib3==1.26.2           # via -r ./requirements.txt, requests, sentry-sdk
+urllib3==1.26.3           # via -r ./requirements.txt, requests, sentry-sdk
 wcwidth==0.2.5            # via prompt-toolkit
 wrapt==1.12.1             # via -r ./requirements.txt, debtcollector
 
