--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -64,7 +64,7 @@ debtcollector==2.2.0
     #   python-keystoneclient
 decorator==4.4.2
     # via ipython
-defusedxml==0.7.0
+defusedxml==0.7.1
     # via
     #   -r ./requirements.txt
     #   djangorestframework-xml
@@ -101,7 +101,7 @@ djangorestframework==3.12.2
     #   drf-hal-json
     #   drf-nested-fields
     #   drf-yasg
-drf-amsterdam==0.4.0
+drf-amsterdam==0.4.1
     # via -r ./requirements.txt
 drf-extensions==0.7.0
     # via
@@ -121,9 +121,9 @@ et-xmlfile==1.0.1
     #   openpyxl
 factory-boy==3.2.0
     # via -r requirements_dev.in
-faker==6.5.0
+faker==6.6.2
     # via factory-boy
-flake8==3.8.4
+flake8==3.9.0
     # via pytest-flake8
 idna==2.10
     # via
@@ -135,7 +135,7 @@ inflection==0.5.1
     #   drf-yasg
 iniconfig==1.1.1
     # via pytest
-ipdb==0.13.5
+ipdb==0.13.7
     # via -r requirements_dev.in
 ipython-genutils==0.2.0
     # via traitlets
@@ -146,16 +146,12 @@ iso8601==0.1.14
     #   -r ./requirements.txt
     #   keystoneauth1
     #   oslo.utils
-isort==5.7.0
+isort==5.8.0
     # via pytest-isort
 itypes==1.2.0
     # via
     #   -r ./requirements.txt
     #   coreapi
-jdcal==1.4.1
-    # via
-    #   -r ./requirements.txt
-    #   openpyxl
 jedi==0.18.0
     # via ipython
 jinja2==2.11.3
@@ -191,7 +187,7 @@ netifaces==0.10.9
     # via
     #   -r ./requirements.txt
     #   oslo.utils
-openpyxl==3.0.6
+openpyxl==3.0.7
     # via -r ./requirements.txt
 os-service-types==1.7.0
     # via
@@ -237,15 +233,17 @@ pbr==5.5.1
     #   oslo.utils
     #   python-keystoneclient
     #   stevedore
+pep517==0.10.0
+    # via pip-tools
 pexpect==4.8.0
     # via ipython
 pickleshare==0.7.5
     # via ipython
-pip-tools==5.5.0
+pip-tools==6.0.1
     # via -r requirements_dev.in
 pluggy==0.13.1
     # via pytest
-prompt-toolkit==3.0.16
+prompt-toolkit==3.0.17
     # via ipython
 psycopg2-binary==2.8.6
     # via -r ./requirements.txt
@@ -253,13 +251,13 @@ ptyprocess==0.7.0
     # via pexpect
 py==1.10.0
     # via pytest
-pycodestyle==2.6.0
+pycodestyle==2.7.0
     # via flake8
 pycparser==2.20
     # via
     #   -r ./requirements.txt
     #   cffi
-pyflakes==2.2.0
+pyflakes==2.3.0
     # via flake8
 pygments==2.8.1
     # via ipython
@@ -292,7 +290,7 @@ python-dateutil==2.8.1
     #   faker
 python-keystoneclient==4.2.0
     # via -r ./requirements.txt
-python-swiftclient==3.11.0
+python-swiftclient==3.11.1
     # via -r ./requirements.txt
 pytz==2021.1
     # via
@@ -305,7 +303,7 @@ pyyaml==5.4.1
     # via
     #   -r ./requirements.txt
     #   oslo.config
-regex==2020.11.13
+regex==2021.3.17
     # via black
 requests==2.25.1
     # via
@@ -355,6 +353,8 @@ text-unidecode==1.3
 toml==0.10.2
     # via
     #   black
+    #   ipdb
+    #   pep517
     #   pytest
     #   pytest-black
 traitlets==5.0.5
@@ -372,7 +372,7 @@ uritemplate==3.0.1
     #   -r ./requirements.txt
     #   coreapi
     #   drf-yasg
-urllib3==1.26.3
+urllib3==1.26.4
     # via
     #   -r ./requirements.txt
     #   requests
