--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -10,11 +10,11 @@ asgiref==3.3.4
     # via
     #   -r ./requirements.txt
     #   django
-attrs==20.3.0
+attrs==21.2.0
     # via pytest
 backcall==0.2.0
     # via ipython
-black==20.8b1
+black==21.5b1
     # via
     #   -r requirements_dev.in
     #   pytest-black
@@ -31,7 +31,7 @@ chardet==4.0.0
     # via
     #   -r ./requirements.txt
     #   requests
-click==7.1.2
+click==8.0.0
     # via
     #   black
     #   pip-tools
@@ -44,13 +44,13 @@ coreschema==0.0.4
     #   -r ./requirements.txt
     #   coreapi
     #   drf-yasg
-coverage==5.5
+coverage[toml]==5.5
     # via pytest-cov
 cryptography==3.4.7
     # via
     #   -r ./requirements.txt
     #   jwcrypto
-datapunt-authorization-django==1.3.0
+datapunt-authorization-django==1.3.1
     # via -r ./requirements.txt
 datapunt-authorization-levels==0.1.3
     # via -r ./requirements.txt
@@ -62,17 +62,17 @@ debtcollector==2.2.0
     #   oslo.config
     #   oslo.utils
     #   python-keystoneclient
-decorator==5.0.7
+decorator==5.0.9
     # via ipython
 defusedxml==0.7.1
     # via
     #   -r ./requirements.txt
     #   djangorestframework-xml
-django-extensions==3.1.2
+django-extensions==3.1.3
     # via -r ./requirements.txt
 django-filter==2.4.0
     # via -r ./requirements.txt
-django==3.2
+django==3.2.3
     # via
     #   -r ./requirements.txt
     #   datapunt-authorization-django
@@ -82,7 +82,7 @@ django==3.2
     #   drf-hal-json
     #   drf-nested-fields
     #   drf-yasg
-djangorestframework-csv==2.1.0
+djangorestframework-csv==2.1.1
     # via
     #   -r ./requirements.txt
     #   drf-amsterdam
@@ -116,15 +116,15 @@ drf-nested-fields==0.9.5
     #   drf-hal-json
 drf-yasg==1.20.0
     # via -r ./requirements.txt
-et-xmlfile==1.0.1
+et-xmlfile==1.1.0
     # via
     #   -r ./requirements.txt
     #   openpyxl
 factory-boy==3.2.0
     # via -r requirements_dev.in
-faker==8.1.0
+faker==8.1.4
     # via factory-boy
-flake8==3.9.1
+flake8==3.9.2
     # via pytest-flake8
 idna==2.10
     # via
@@ -140,7 +140,7 @@ ipdb==0.13.7
     # via -r requirements_dev.in
 ipython-genutils==0.2.0
     # via traitlets
-ipython==7.22.0
+ipython==7.23.1
     # via ipdb
 iso8601==0.1.14
     # via
@@ -155,7 +155,7 @@ itypes==1.2.0
     #   coreapi
 jedi==0.18.0
     # via ipython
-jinja2==2.11.3
+jinja2==3.0.0
     # via
     #   -r ./requirements.txt
     #   coreschema
@@ -167,10 +167,12 @@ keystoneauth1==4.3.1
     # via
     #   -r ./requirements.txt
     #   python-keystoneclient
-markupsafe==1.1.1
+markupsafe==2.0.0
     # via
     #   -r ./requirements.txt
     #   jinja2
+matplotlib-inline==0.1.2
+    # via ipython
 mccabe==0.6.1
     # via flake8
 msgpack==1.0.2
@@ -194,7 +196,7 @@ os-service-types==1.7.0
     # via
     #   -r ./requirements.txt
     #   keystoneauth1
-oslo.config==8.5.0
+oslo.config==8.7.0
     # via
     #   -r ./requirements.txt
     #   python-keystoneclient
@@ -208,7 +210,7 @@ oslo.serialization==4.1.0
     # via
     #   -r ./requirements.txt
     #   python-keystoneclient
-oslo.utils==4.8.0
+oslo.utils==4.9.0
     # via
     #   -r ./requirements.txt
     #   oslo.serialization
@@ -223,7 +225,7 @@ parso==0.8.2
     # via jedi
 pathspec==0.8.1
     # via black
-pbr==5.5.1
+pbr==5.6.0
     # via
     #   -r ./requirements.txt
     #   debtcollector
@@ -260,7 +262,7 @@ pycparser==2.20
     #   cffi
 pyflakes==2.3.1
     # via flake8
-pygments==2.8.1
+pygments==2.9.0
     # via ipython
 pyparsing==2.4.7
     # via
@@ -269,15 +271,15 @@ pyparsing==2.4.7
     #   packaging
 pytest-black==0.3.12
     # via -r requirements_dev.in
-pytest-cov==2.11.1
+pytest-cov==2.12.0
     # via -r requirements_dev.in
-pytest-django==4.2.0
+pytest-django==4.3.0
     # via -r requirements_dev.in
 pytest-flake8==1.0.7
     # via -r requirements_dev.in
-pytest-isort==1.3.0
+pytest-isort==2.0.0
     # via -r requirements_dev.in
-pytest==6.2.3
+pytest==6.2.4
     # via
     #   -r requirements_dev.in
     #   pytest-black
@@ -315,7 +317,7 @@ requests==2.25.1
     #   oslo.config
     #   python-keystoneclient
     #   python-swiftclient
-rfc3986==1.4.0
+rfc3986==1.5.0
     # via
     #   -r ./requirements.txt
     #   oslo.config
@@ -327,9 +329,9 @@ ruamel.yaml==0.17.4
     # via
     #   -r ./requirements.txt
     #   drf-yasg
-sentry-sdk==1.0.0
+sentry-sdk==1.1.0
     # via -r ./requirements.txt
-six==1.15.0
+six==1.16.0
     # via
     #   -r ./requirements.txt
     #   debtcollector
@@ -354,16 +356,15 @@ text-unidecode==1.3
 toml==0.10.2
     # via
     #   black
+    #   coverage
     #   ipdb
     #   pep517
     #   pytest
     #   pytest-black
 traitlets==5.0.5
-    # via ipython
-typed-ast==1.4.3
-    # via black
-typing-extensions==3.7.4.3
-    # via black
+    # via
+    #   ipython
+    #   matplotlib-inline
 unicodecsv==0.14.1
     # via
     #   -r ./requirements.txt
