--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,15 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
-asgiref==3.4.0
+asgiref==3.4.1
     # via django
 certifi==2021.5.30
     # via
     #   requests
     #   sentry-sdk
-cffi==1.14.5
+cffi==1.14.6
     # via cryptography
-chardet==4.0.0
+charset-normalizer==2.0.4
     # via requests
 coreapi==2.3.3
     # via drf-yasg
@@ -41,7 +41,7 @@ django-extensions==3.1.3
     # via -r requirements.in
 django-filter==2.4.0
     # via -r requirements.in
-django==3.2.4
+django==3.2.6
     # via
     #   -r requirements.in
     #   datapunt-authorization-django
@@ -69,7 +69,7 @@ djangorestframework==3.12.4
     #   drf-yasg
 drf-amsterdam==0.4.1
     # via -r requirements.in
-drf-extensions==0.7.0
+drf-extensions==0.7.1
     # via drf-amsterdam
 drf-hal-json==0.10.0
     # via -r requirements.in
@@ -79,11 +79,11 @@ drf-yasg==1.20.0
     # via -r requirements.in
 et-xmlfile==1.1.0
     # via openpyxl
-idna==2.10
+idna==3.2
     # via requests
 inflection==0.5.1
     # via drf-yasg
-iso8601==0.1.14
+iso8601==0.1.16
     # via
     #   keystoneauth1
     #   oslo.utils
@@ -111,7 +111,7 @@ openpyxl==3.0.7
     # via -r requirements.in
 os-service-types==1.7.0
     # via keystoneauth1
-oslo.config==8.7.0
+oslo.config==8.7.1
     # via python-keystoneclient
 oslo.i18n==5.0.1
     # via
@@ -120,11 +120,11 @@ oslo.i18n==5.0.1
     #   python-keystoneclient
 oslo.serialization==4.1.0
     # via python-keystoneclient
-oslo.utils==4.9.1
+oslo.utils==4.9.2
     # via
     #   oslo.serialization
     #   python-keystoneclient
-packaging==20.9
+packaging==21.0
     # via
     #   drf-yasg
     #   oslo.utils
@@ -146,7 +146,7 @@ pyparsing==2.4.7
     # via
     #   oslo.utils
     #   packaging
-python-dateutil==2.8.1
+python-dateutil==2.8.2
     # via dateutils
 python-keystoneclient==4.2.0
     # via -r requirements.in
@@ -160,7 +160,7 @@ pytz==2021.1
     #   oslo.utils
 pyyaml==5.4.1
     # via oslo.config
-requests==2.25.1
+requests==2.26.0
     # via
     #   coreapi
     #   datapunt-authorization-django
@@ -170,11 +170,11 @@ requests==2.25.1
     #   python-swiftclient
 rfc3986==1.5.0
     # via oslo.config
-ruamel.yaml.clib==0.2.4
+ruamel.yaml.clib==0.2.6
     # via ruamel.yaml
 ruamel.yaml==0.17.10
     # via drf-yasg
-sentry-sdk==1.1.0
+sentry-sdk==1.3.1
     # via -r requirements.in
 six==1.16.0
     # via
