--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -6,7 +6,7 @@
 #
 appdirs==1.4.4
     # via black
-asgiref==3.4.0
+asgiref==3.4.1
     # via
     #   -r ./requirements.txt
     #   django
@@ -14,7 +14,7 @@ attrs==21.2.0
     # via pytest
 backcall==0.2.0
     # via ipython
-black==21.6b0
+black==21.7b0
     # via
     #   -r requirements_dev.in
     #   pytest-black
@@ -23,11 +23,11 @@ certifi==2021.5.30
     #   -r ./requirements.txt
     #   requests
     #   sentry-sdk
-cffi==1.14.5
+cffi==1.14.6
     # via
     #   -r ./requirements.txt
     #   cryptography
-chardet==4.0.0
+charset-normalizer==2.0.4
     # via
     #   -r ./requirements.txt
     #   requests
@@ -78,7 +78,7 @@ django-extensions==3.1.3
     # via -r ./requirements.txt
 django-filter==2.4.0
     # via -r ./requirements.txt
-django==3.2.4
+django==3.2.6
     # via
     #   -r ./requirements.txt
     #   datapunt-authorization-django
@@ -110,7 +110,7 @@ djangorestframework==3.12.4
     #   drf-yasg
 drf-amsterdam==0.4.1
     # via -r ./requirements.txt
-drf-extensions==0.7.0
+drf-extensions==0.7.1
     # via
     #   -r ./requirements.txt
     #   drf-amsterdam
@@ -128,11 +128,11 @@ et-xmlfile==1.1.0
     #   openpyxl
 factory-boy==3.2.0
     # via -r requirements_dev.in
-faker==8.8.2
+faker==8.10.3
     # via factory-boy
 flake8==3.9.2
     # via pytest-flake8
-idna==2.10
+idna==3.2
     # via
     #   -r ./requirements.txt
     #   requests
@@ -146,14 +146,14 @@ ipdb==0.13.9
     # via -r requirements_dev.in
 ipython-genutils==0.2.0
     # via traitlets
-ipython==7.25.0
+ipython==7.26.0
     # via ipdb
-iso8601==0.1.14
+iso8601==0.1.16
     # via
     #   -r ./requirements.txt
     #   keystoneauth1
     #   oslo.utils
-isort==5.9.1
+isort==5.9.3
     # via pytest-isort
 itypes==1.2.0
     # via
@@ -202,7 +202,7 @@ os-service-types==1.7.0
     # via
     #   -r ./requirements.txt
     #   keystoneauth1
-oslo.config==8.7.0
+oslo.config==8.7.1
     # via
     #   -r ./requirements.txt
     #   python-keystoneclient
@@ -216,12 +216,12 @@ oslo.serialization==4.1.0
     # via
     #   -r ./requirements.txt
     #   python-keystoneclient
-oslo.utils==4.9.1
+oslo.utils==4.9.2
     # via
     #   -r ./requirements.txt
     #   oslo.serialization
     #   python-keystoneclient
-packaging==20.9
+packaging==21.0
     # via
     #   -r ./requirements.txt
     #   drf-yasg
@@ -229,7 +229,7 @@ packaging==20.9
     #   pytest
 parso==0.8.2
     # via jedi
-pathspec==0.8.1
+pathspec==0.9.0
     # via black
 pbr==5.6.0
     # via
@@ -242,7 +242,7 @@ pbr==5.6.0
     #   oslo.utils
     #   python-keystoneclient
     #   stevedore
-pep517==0.10.0
+pep517==0.11.0
     # via pip-tools
 pexpect==4.8.0
     # via ipython
@@ -292,7 +292,7 @@ pytest==6.2.4
     #   pytest-cov
     #   pytest-django
     #   pytest-flake8
-python-dateutil==2.8.1
+python-dateutil==2.8.2
     # via
     #   -r ./requirements.txt
     #   dateutils
@@ -312,9 +312,9 @@ pyyaml==5.4.1
     # via
     #   -r ./requirements.txt
     #   oslo.config
-regex==2021.4.4
+regex==2021.7.6
     # via black
-requests==2.25.1
+requests==2.26.0
     # via
     #   -r ./requirements.txt
     #   coreapi
@@ -327,7 +327,7 @@ rfc3986==1.5.0
     # via
     #   -r ./requirements.txt
     #   oslo.config
-ruamel.yaml.clib==0.2.4
+ruamel.yaml.clib==0.2.6
     # via
     #   -r ./requirements.txt
     #   ruamel.yaml
@@ -335,7 +335,7 @@ ruamel.yaml==0.17.10
     # via
     #   -r ./requirements.txt
     #   drf-yasg
-sentry-sdk==1.1.0
+sentry-sdk==1.3.1
     # via -r ./requirements.txt
 six==1.16.0
     # via
@@ -362,12 +362,14 @@ text-unidecode==1.3
     # via faker
 toml==0.10.2
     # via
-    #   black
     #   ipdb
-    #   pep517
     #   pytest
     #   pytest-black
     #   pytest-cov
+tomli==1.2.0
+    # via
+    #   black
+    #   pep517
 traitlets==5.0.5
     # via
     #   ipython
