--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -14,7 +14,7 @@ attrs==21.4.0
     # via pytest
 backcall==0.2.0
     # via ipython
-black==21.12b0
+black==22.1.0
     # via
     #   -r requirements_dev.in
     #   ipython
@@ -28,7 +28,7 @@ cffi==1.15.0
     # via
     #   -r ./requirements.txt
     #   cryptography
-charset-normalizer==2.0.10
+charset-normalizer==2.0.12
     # via
     #   -r ./requirements.txt
     #   requests
@@ -45,7 +45,7 @@ coreschema==0.0.4
     #   -r ./requirements.txt
     #   coreapi
     #   drf-yasg
-coverage[toml]==6.2
+coverage[toml]==6.3.1
     # via pytest-cov
 cryptography==36.0.1
     # via
@@ -60,8 +60,8 @@ dateutils==0.6.12
 debtcollector==2.4.0
     # via
     #   -r ./requirements.txt
-    #   oslo.config
-    #   oslo.utils
+    #   oslo-config
+    #   oslo-utils
     #   python-keystoneclient
 decorator==5.1.1
     # via
@@ -75,7 +75,7 @@ deprecated==1.2.13
     # via
     #   -r ./requirements.txt
     #   jwcrypto
-django==3.2.11
+django==3.2.12
     # via
     #   -r ./requirements.txt
     #   datapunt-authorization-django
@@ -131,7 +131,7 @@ executing==0.8.2
     # via stack-data
 factory-boy==3.2.1
     # via -r requirements_dev.in
-faker==11.3.0
+faker==12.3.0
     # via factory-boy
 flake8==3.9.2
     # via
@@ -155,7 +155,7 @@ iso8601==1.0.2
     # via
     #   -r ./requirements.txt
     #   keystoneauth1
-    #   oslo.utils
+    #   oslo-utils
 isort==5.10.1
     # via pytest-isort
 itypes==1.2.0
@@ -187,62 +187,62 @@ mccabe==0.6.1
 msgpack==1.0.3
     # via
     #   -r ./requirements.txt
-    #   oslo.serialization
+    #   oslo-serialization
 mypy-extensions==0.4.3
     # via black
 netaddr==0.8.0
     # via
     #   -r ./requirements.txt
-    #   oslo.config
-    #   oslo.utils
+    #   oslo-config
+    #   oslo-utils
 netifaces==0.11.0
     # via
     #   -r ./requirements.txt
-    #   oslo.utils
+    #   oslo-utils
 openpyxl==3.0.9
     # via -r ./requirements.txt
 os-service-types==1.7.0
     # via
     #   -r ./requirements.txt
     #   keystoneauth1
-oslo.config==8.7.1
+oslo-config==8.7.1
     # via
     #   -r ./requirements.txt
     #   python-keystoneclient
-oslo.i18n==5.1.0
+oslo-i18n==5.1.0
     # via
     #   -r ./requirements.txt
-    #   oslo.config
-    #   oslo.utils
+    #   oslo-config
+    #   oslo-utils
     #   python-keystoneclient
-oslo.serialization==4.2.0
+oslo-serialization==4.2.0
     # via
     #   -r ./requirements.txt
     #   python-keystoneclient
-oslo.utils==4.12.1
+oslo-utils==4.12.1
     # via
     #   -r ./requirements.txt
-    #   oslo.serialization
+    #   oslo-serialization
     #   python-keystoneclient
 packaging==21.3
     # via
     #   -r ./requirements.txt
     #   drf-yasg
-    #   oslo.utils
+    #   oslo-utils
     #   pytest
 parso==0.8.3
     # via jedi
 pathspec==0.9.0
     # via black
-pbr==5.8.0
+pbr==5.8.1
     # via
     #   -r ./requirements.txt
     #   debtcollector
     #   keystoneauth1
     #   os-service-types
-    #   oslo.i18n
-    #   oslo.serialization
-    #   oslo.utils
+    #   oslo-i18n
+    #   oslo-serialization
+    #   oslo-utils
     #   python-keystoneclient
     #   stevedore
 pep517==0.12.0
@@ -251,13 +251,13 @@ pexpect==4.8.0
     # via ipython
 pickleshare==0.7.5
     # via ipython
-pip-tools==6.4.0
+pip-tools==6.5.1
     # via -r requirements_dev.in
-platformdirs==2.4.1
+platformdirs==2.5.0
     # via black
 pluggy==1.0.0
     # via pytest
-prompt-toolkit==3.0.24
+prompt-toolkit==3.0.28
     # via ipython
 psycopg2-binary==2.9.3
     # via -r ./requirements.txt
@@ -280,15 +280,16 @@ pygments==2.11.2
 pyparsing==3.0.7
     # via
     #   -r ./requirements.txt
-    #   oslo.utils
+    #   oslo-utils
     #   packaging
-pytest==6.2.5
+pytest==7.0.1
     # via
     #   -r requirements_dev.in
     #   pytest-black
     #   pytest-cov
     #   pytest-django
     #   pytest-flake8
+    #   pytest-isort
 pytest-black==0.3.12
     # via -r requirements_dev.in
 pytest-cov==3.0.0
@@ -297,7 +298,7 @@ pytest-django==4.5.2
     # via -r requirements_dev.in
 pytest-flake8==1.0.7
     # via -r requirements_dev.in
-pytest-isort==2.0.0
+pytest-isort==3.0.0
     # via -r requirements_dev.in
 python-dateutil==2.8.2
     # via
@@ -314,34 +315,34 @@ pytz==2021.3
     #   dateutils
     #   django
     #   djangorestframework
-    #   oslo.serialization
-    #   oslo.utils
+    #   oslo-serialization
+    #   oslo-utils
 pyyaml==6.0
     # via
     #   -r ./requirements.txt
-    #   oslo.config
+    #   oslo-config
 requests==2.27.1
     # via
     #   -r ./requirements.txt
     #   coreapi
     #   datapunt-authorization-django
     #   keystoneauth1
-    #   oslo.config
+    #   oslo-config
     #   python-keystoneclient
     #   python-swiftclient
 rfc3986==2.0.0
     # via
     #   -r ./requirements.txt
-    #   oslo.config
-ruamel.yaml==0.17.20
+    #   oslo-config
+ruamel-yaml==0.17.21
     # via
     #   -r ./requirements.txt
     #   drf-yasg
-ruamel.yaml.clib==0.2.6
+ruamel-yaml-clib==0.2.6
     # via
     #   -r ./requirements.txt
-    #   ruamel.yaml
-sentry-sdk==1.5.3
+    #   ruamel-yaml
+sentry-sdk==1.5.5
     # via -r ./requirements.txt
 six==1.16.0
     # via
@@ -361,25 +362,23 @@ stevedore==3.5.0
     # via
     #   -r ./requirements.txt
     #   keystoneauth1
-    #   oslo.config
+    #   oslo-config
     #   python-keystoneclient
-text-unidecode==1.3
-    # via faker
 toml==0.10.2
     # via
     #   ipdb
-    #   pytest
     #   pytest-black
-tomli==1.2.3
+tomli==2.0.1
     # via
     #   black
     #   coverage
     #   pep517
+    #   pytest
 traitlets==5.1.1
     # via
     #   ipython
     #   matplotlib-inline
-typing-extensions==4.0.1
+typing-extensions==4.1.1
     # via black
 unicodecsv==0.14.1
     # via
