--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -17,7 +17,6 @@ backcall==0.2.0
 black==22.1.0
     # via
     #   -r requirements_dev.in
-    #   ipython
     #   pytest-black
 certifi==2021.10.8
     # via
@@ -32,7 +31,7 @@ charset-normalizer==2.0.12
     # via
     #   -r ./requirements.txt
     #   requests
-click==8.0.3
+click==8.0.4
     # via
     #   black
     #   pip-tools
@@ -45,13 +44,13 @@ coreschema==0.0.4
     #   -r ./requirements.txt
     #   coreapi
     #   drf-yasg
-coverage[toml]==6.3.1
+coverage[toml]==6.3.2
     # via pytest-cov
 cryptography==36.0.1
     # via
     #   -r ./requirements.txt
     #   jwcrypto
-datapunt-authorization-django==1.3.1
+datapunt-authorization-django==1.3.2
     # via -r ./requirements.txt
 datapunt-authorization-levels==0.1.3
     # via -r ./requirements.txt
@@ -60,8 +59,8 @@ dateutils==0.6.12
 debtcollector==2.4.0
     # via
     #   -r ./requirements.txt
-    #   oslo-config
-    #   oslo-utils
+    #   oslo.config
+    #   oslo.utils
     #   python-keystoneclient
 decorator==5.1.1
     # via
@@ -127,11 +126,11 @@ et-xmlfile==1.1.0
     # via
     #   -r ./requirements.txt
     #   openpyxl
-executing==0.8.2
+executing==0.8.3
     # via stack-data
 factory-boy==3.2.1
     # via -r requirements_dev.in
-faker==12.3.0
+faker==13.3.0
     # via factory-boy
 flake8==3.9.2
     # via
@@ -149,13 +148,13 @@ iniconfig==1.1.1
     # via pytest
 ipdb==0.13.9
     # via -r requirements_dev.in
-ipython==8.0.1
+ipython==8.1.1
     # via ipdb
 iso8601==1.0.2
     # via
     #   -r ./requirements.txt
     #   keystoneauth1
-    #   oslo-utils
+    #   oslo.utils
 isort==5.10.1
     # via pytest-isort
 itypes==1.2.0
@@ -176,7 +175,7 @@ keystoneauth1==4.4.0
     # via
     #   -r ./requirements.txt
     #   python-keystoneclient
-markupsafe==2.0.1
+markupsafe==2.1.0
     # via
     #   -r ./requirements.txt
     #   jinja2
@@ -187,48 +186,48 @@ mccabe==0.6.1
 msgpack==1.0.3
     # via
     #   -r ./requirements.txt
-    #   oslo-serialization
+    #   oslo.serialization
 mypy-extensions==0.4.3
     # via black
 netaddr==0.8.0
     # via
     #   -r ./requirements.txt
-    #   oslo-config
-    #   oslo-utils
+    #   oslo.config
+    #   oslo.utils
 netifaces==0.11.0
     # via
     #   -r ./requirements.txt
-    #   oslo-utils
+    #   oslo.utils
 openpyxl==3.0.9
     # via -r ./requirements.txt
 os-service-types==1.7.0
     # via
     #   -r ./requirements.txt
     #   keystoneauth1
-oslo-config==8.7.1
+oslo.config==8.8.0
     # via
     #   -r ./requirements.txt
     #   python-keystoneclient
-oslo-i18n==5.1.0
+oslo.i18n==5.1.0
     # via
     #   -r ./requirements.txt
-    #   oslo-config
-    #   oslo-utils
+    #   oslo.config
+    #   oslo.utils
     #   python-keystoneclient
-oslo-serialization==4.2.0
+oslo.serialization==4.3.0
     # via
     #   -r ./requirements.txt
     #   python-keystoneclient
-oslo-utils==4.12.1
+oslo.utils==4.12.2
     # via
     #   -r ./requirements.txt
-    #   oslo-serialization
+    #   oslo.serialization
     #   python-keystoneclient
 packaging==21.3
     # via
     #   -r ./requirements.txt
     #   drf-yasg
-    #   oslo-utils
+    #   oslo.utils
     #   pytest
 parso==0.8.3
     # via jedi
@@ -240,9 +239,9 @@ pbr==5.8.1
     #   debtcollector
     #   keystoneauth1
     #   os-service-types
-    #   oslo-i18n
-    #   oslo-serialization
-    #   oslo-utils
+    #   oslo.i18n
+    #   oslo.serialization
+    #   oslo.utils
     #   python-keystoneclient
     #   stevedore
 pep517==0.12.0
@@ -253,7 +252,7 @@ pickleshare==0.7.5
     # via ipython
 pip-tools==6.5.1
     # via -r requirements_dev.in
-platformdirs==2.5.0
+platformdirs==2.5.1
     # via black
 pluggy==1.0.0
     # via pytest
@@ -280,7 +279,7 @@ pygments==2.11.2
 pyparsing==3.0.7
     # via
     #   -r ./requirements.txt
-    #   oslo-utils
+    #   oslo.utils
     #   packaging
 pytest==7.0.1
     # via
@@ -296,7 +295,7 @@ pytest-cov==3.0.0
     # via -r requirements_dev.in
 pytest-django==4.5.2
     # via -r requirements_dev.in
-pytest-flake8==1.0.7
+pytest-flake8==1.1.0
     # via -r requirements_dev.in
 pytest-isort==3.0.0
     # via -r requirements_dev.in
@@ -307,7 +306,7 @@ python-dateutil==2.8.2
     #   faker
 python-keystoneclient==4.4.0
     # via -r ./requirements.txt
-python-swiftclient==3.13.0
+python-swiftclient==3.13.1
     # via -r ./requirements.txt
 pytz==2021.3
     # via
@@ -315,34 +314,34 @@ pytz==2021.3
     #   dateutils
     #   django
     #   djangorestframework
-    #   oslo-serialization
-    #   oslo-utils
+    #   oslo.serialization
+    #   oslo.utils
 pyyaml==6.0
     # via
     #   -r ./requirements.txt
-    #   oslo-config
+    #   oslo.config
 requests==2.27.1
     # via
     #   -r ./requirements.txt
     #   coreapi
     #   datapunt-authorization-django
     #   keystoneauth1
-    #   oslo-config
+    #   oslo.config
     #   python-keystoneclient
     #   python-swiftclient
 rfc3986==2.0.0
     # via
     #   -r ./requirements.txt
-    #   oslo-config
-ruamel-yaml==0.17.21
+    #   oslo.config
+ruamel.yaml==0.17.21
     # via
     #   -r ./requirements.txt
     #   drf-yasg
-ruamel-yaml-clib==0.2.6
+ruamel.yaml.clib==0.2.6
     # via
     #   -r ./requirements.txt
-    #   ruamel-yaml
-sentry-sdk==1.5.5
+    #   ruamel.yaml
+sentry-sdk==1.5.6
     # via -r ./requirements.txt
 six==1.16.0
     # via
@@ -356,13 +355,13 @@ sqlparse==0.4.2
     # via
     #   -r ./requirements.txt
     #   django
-stack-data==0.1.4
+stack-data==0.2.0
     # via ipython
 stevedore==3.5.0
     # via
     #   -r ./requirements.txt
     #   keystoneauth1
-    #   oslo-config
+    #   oslo.config
     #   python-keystoneclient
 toml==0.10.2
     # via
